fixed text wrapping for messages

--- a/src/main/resources/com/rtkay/theme/styles.css
+++ b/src/main/resources/com/rtkay/theme/styles.css
@@ -6,12 +6,12 @@
     -fx-focus-color: transparent;
     -fx-faint-focus-color: transparent;
     -fx-font-family: "Inter V";
+    -fx-font-weight: bold;
 }
 
 .jfx-button {
     -fx-border-radius: 50%;
     -fx-background-radius: 50%;
-
 }
 
 .context-menu {
